--- a/src/components/input/__dropdown/input__dropdown.scss
+++ b/src/components/input/__dropdown/input__dropdown.scss
@@ -1,4 +1,5 @@
 @import '@variables';
+@import "@styles/__text/styles__text.scss";
 
 $optionButtonSize: 30px;
 
@@ -25,6 +26,7 @@ $optionButtonSize: 30px;
   }
 
   &__option {
+    @extend %styles__text_h3;
     align-items: center;
 
     &-name {
