Changed the way of header inserting among website child pages

--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -5,6 +5,10 @@ block head
   title TOXIN HOTEL / LANDING
 
 
+block header
+  +header({ authorized: false })
+
+
 block main
   include /components/card/__find-room/card__find-room.pug
   
