--- a/src/pages/website/__login/website__login.pug
+++ b/src/pages/website/__login/website__login.pug
@@ -5,6 +5,10 @@ block head
   title TOXIN HOTEL / LOGIN
 
 
+block header
+  +header({ authorized: false })
+
+
 block main
   include /components/card/__login/card__login.pug
 
