--- a/src/pages/website/__registration/website__registration.pug
+++ b/src/pages/website/__registration/website__registration.pug
@@ -5,6 +5,10 @@ block head
   title TOXIN HOTEL / REGISTRATION
 
 
+block header
+  +header({ authorized: false })
+
+
 block main
   include /components/card/__registration/card__registration.pug
 
