--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -5,6 +5,10 @@ block head
   title TOXIN HOTEL / ROOM
 
 
+block header
+  +header({ authorized: false })
+
+
 block main
   include /components/card/__room-booking/card__room-booking.pug
   include /components/advantage-bar/advantage-bar.pug
