--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -11,8 +11,7 @@ head
 
 body.website__body
   header.website__header
-    +header({ authorized: false })
-    block modal
+    block header
     .modal-window__navigation.modal-window_invisible
       +modalWindow({
         id: "ejectable-button_navigation-1",
