Remover unscoped include of header from website parent template, inserted it to the child pages

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -6,6 +6,7 @@ block head
 
 
 block header
+  include /components/header/header.pug
   include /components/modal-window/modal-window.pug
 
   +header({ authorized: false, filtering: true })
