Fixed absent style rule of website-search page

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -137,11 +137,11 @@ block main
   main.website__main.fullscreen-bottom-border
     .search-page
       .search-page__input-parameters-block
-        .search-page__input-parameters.elem__width_83
+        .search-page__input-parameters
           +cardFilter({ id: "search-page__card-filter"})
         .search-page__shift-activator
       .search-page__filtered-items
-        .search-page__filtered-items-title.custom-font-style_h1
+        .search-page__filtered-items-title
           span.search-page__filtered-items-title_text Номера, которые мы для вас подобрали
         .search-page__filtered-items-grid
           each sample in samples
