--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -1,4 +1,5 @@
 @import "@variables";
+@import "@styles/__text/styles__text.scss";
 
 
 $sideWindowWidth: 360px;
@@ -128,6 +129,10 @@ $inputParametersPadding: 20px;
   }
 
   &__filtered-items {
+    &-title {
+      @extend %styles__text_h1;
+    }
+
     &-grid {
       display: grid;
       grid-gap: 20px 12px;
