--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -58,14 +58,12 @@ block main
             +input({
               id: "uik-fe__date-twins_arrival",
               type: "date-picker",
-              title: "date dropdown",
-              widthpx: 150,
+              title: "date dropdown"
             })
             +input({
               id: "uik-fe__date-twins_departure",
               type: "date-picker",
               title: "date dropdown",
-              widthpx: 150,
               dates: "2019-08-23"
             })
       .form-elements__block.block__dropdowns_date-semi-wide
@@ -73,7 +71,7 @@ block main
           id: "uik-fe__semi-wide_01",
           type: "date-picker",
           title: "filter date dropdown",
-          widthpx: 266,
+          widthpx: "266px",
           dates: "2019-08-19, 2019-08-23"
         })
       .form-elements__block.block__inputs_subscribe
@@ -81,7 +79,7 @@ block main
           type: "subscription",
           title: "subscription text field",
           placeholder: "Email",
-          widthpx: 266,
+          widthpx: "266px",
         })
     .form-elements__column.column_center
       .form-elements__block.block__checkbox-buttons
@@ -128,7 +126,7 @@ block main
         +rangeSlider({
           title: "range slider",
           id: "uik-fe-range-slider",
-          widthpx: 266,
+          widthpx: "266px",
         })
       .form-elements__block.block__mean-oval-buttons
         .form-elements__element
@@ -177,7 +175,7 @@ block main
           type: "dropdown",
           title: "dropdown",
           state: "default",
-          width: "266",
+          widthpx: "266px",
           dropdown: {
             type: "facilities",
             values: [ 2, 2, 0 ],
@@ -188,7 +186,7 @@ block main
           type: "dropdown",
           title: "dropdown",
           state: "expanded",
-          width: "266",
+          widthpx: "266px",
           dropdown: {
             type: "facilities",
             values: [ 2, 2, 0 ],
@@ -307,4 +305,4 @@ block main
               likecount: 12
             }
           }
-        ]) 
+        ])
