Refactoring of mean-oval-button component

--- a/src/components/button/__mean-oval/button__mean-oval.pug
+++ b/src/components/button/__mean-oval/button__mean-oval.pug
@@ -9,9 +9,8 @@ mixin meanOvalButtons( item )
     - const buttonId = item.groupname + '-' + buttonCount
     - const buttonText = button.text || 'click me'
     - const buttonType = button.type || 'button'
-    - const buttonWidth = `width:${ button.widthpx || 99 }px`
+    - const buttonWidth = `width:${ button.widthpx || '100%' }`
     - const isTextMode = button.mode === 'text'
-    - const textButtonClass = isTextMode ? '.js-mean-oval-button_pos-relative' : ''
 
     - let buttonClasses = ''
 
@@ -20,7 +19,6 @@ mixin meanOvalButtons( item )
 
     .mean-oval-button( class=buttonClasses style=buttonWidth )
       button.mean-oval-button__elem(
-        class=textButtonClass
         id=buttonId
         disabled=button.disabled
         type=buttonType
