--- a/src/components/material-icon-cell/material-icon-cell.scss
+++ b/src/components/material-icon-cell/material-icon-cell.scss
@@ -13,4 +13,8 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+  
+  &_clickable {
+    cursor: pointer;
+  }
 }
