--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -2,7 +2,7 @@ include /components/title-bar/title-bar.pug
 
 mixin rangeSlider( item )
   - const stateId = item.id + '_state'
-  - const sliderWidth = `width:${ item.widthpx || 320 }px`
+  - const sliderWidth = `width:${ item.widthpx || '100%' }`
 
   .range-slider__wrap( style=sliderWidth )
     +titleBar( item.title, true, stateId )
