--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -19,11 +19,21 @@
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 3px;
   box-sizing: border-box;
+  cursor: pointer;
 
   & > .ui-slider-range,
   & > .ui-slider-handle {
     position: absolute;
     background: $secondary-gradient;
+  }
+
+  & > .ui-slider-range {
+    display: block;
+    height: 6px;
+    top: -1px;
+    border: none;
+    z-index: 1;
+    cursor: pointer;
   }
 
   & > .ui-slider-handle {
@@ -37,13 +47,6 @@
     border: 2px solid white;
     border-radius: 50%;
     z-index: 2;
-  }
-
-  & > .ui-slider-range {
-    display: block;
-    height: 6px;
-    top: -1px;
-    border: none;
-    z-index: 1;
+    cursor: grab;
   }
 }
