--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -19,24 +19,27 @@
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 3px;
   box-sizing: border-box;
-  cursor: pointer;
 
-  & > .ui-slider-range,
-  & > .ui-slider-handle {
+  &,
+  & .ui-slider-range {
+    cursor: pointer;
+  }
+  
+  & .ui-slider-range,
+  & .ui-slider-handle {
     position: absolute;
     background: $secondary-gradient;
   }
 
-  & > .ui-slider-range {
+  & .ui-slider-range {
     display: block;
     height: 6px;
     top: -1px;
     border: none;
     z-index: 1;
-    cursor: pointer;
   }
 
-  & > .ui-slider-handle {
+  & .ui-slider-handle {
     width: 12px;
     height: 12px;
     top: -6px;
