Minor syntaxical fix

--- a/src/components/card/__filter/card__filter.pug
+++ b/src/components/card/__filter/card__filter.pug
@@ -29,7 +29,7 @@ mixin cardFilter( item )
     .card-filter__slider
       .card-filter__slider-frame
         +rangeSlider({
-          id: item.id + "_slider",
+          id: item.id + "-slider",
           title: "диапазон цен",
         })
       span.card-filter__slider-note Стоимость за сутки пребывания в номере
