--- a/src/components/card/__login/card__login.pug
+++ b/src/components/card/__login/card__login.pug
@@ -18,7 +18,6 @@ mixin cardLogin()
             mode: "contained",
             text: "войти",
             iconname: "arrow_forward",
-            widthpx: 320
           }
         ]
       })
@@ -30,6 +29,7 @@ mixin cardLogin()
           buttons: [{
             type: "submit",
             mode: "outlined",
-            text: "создать"
+            text: "создать",
+            widthpx: "99px"
           }]
         })
