--- a/src/components/card/__registration/card__registration.pug
+++ b/src/components/card/__registration/card__registration.pug
@@ -28,7 +28,6 @@ mixin cardRegistration()
           mode: "contained",
           text: "Зарегистрироваться",
           iconname: "arrow_forward",
-          widthpx: 320
         }]
       })
     form.card-registration__login-section( action="website__login.html" )
@@ -39,6 +38,7 @@ mixin cardRegistration()
           buttons: [{
             type: "submit",
             mode: "outlined",
-            text: "войти"
+            text: "войти",
+            widthpx: "99px"
           }]
         })
