--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -21,16 +21,14 @@ mixin cardRoomBooking()
           id: "room-booking__date-picker_arrival",
           type: "date-picker",
           title: "прибытие",
-          hierarchy: "master",
-          widthpx: 150
+          hierarchy: "master"
         })
         +input({
           id: "room-booking__date-picker_departure",
           type: "date-picker",
           title: "выезд",
           hierarchy: "slave",
-          dates: "2019-08-19, 2019-08-23",
-          widthpx: 150
+          dates: "2019-08-19, 2019-08-23"
         })
 
     .card-room-booking__container_guests-input
@@ -78,7 +76,6 @@ mixin cardRoomBooking()
           type: "submit",
           mode: "contained",
           text: "Забронировать",
-          iconname: "arrow_forward",
-          widthpx: 320
+          iconname: "arrow_forward"
         }]
       })
