Fixed text buttons incorrect aligning of input-dropdown mixin

--- a/src/components/input/__dropdown/input__dropdown.pug
+++ b/src/components/input/__dropdown/input__dropdown.pug
@@ -30,7 +30,7 @@ mixin inputDropdown( item )
         +meanOvalButtons({
           groupname: item.id,
           buttons: [
-            { type: "text", text: "очистить" },
-            { type: "text", text: "применить"}
+            { mode: "text", widthpx: "auto", text: "очистить"  },
+            { mode: "text", widthpx: "auto", text: "применить" }
           ]
         })
