--- a/src/components/material-icon-cell/material-icon-cell.scss
+++ b/src/components/material-icon-cell/material-icon-cell.scss
@@ -13,6 +13,7 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+  transition: transform .4s ease;
   
   &_clickable {
     cursor: pointer;
