Massive refactoring of expandable entities

--- a/src/components/input/__dropdown/input__dropdown.pug
+++ b/src/components/input/__dropdown/input__dropdown.pug
@@ -5,17 +5,13 @@ include /components/button/__circle/button__circle.pug
 mixin inputDropdown( item )
   - const guestsOptionNames = [ 'взрослые', 'дети', 'младенцы' ]
   - const facilitiesOptionNames = [ 'спальни', 'кровати', 'ванные комнаты' ]
-
   - const dropdown = item.dropdown || {}
   - const values = dropdown.values || [ 0, 0, 0 ]
   - const options = dropdown.type === 'guests' ? guestsOptionNames : facilitiesOptionNames
 
-  - const iconFlippedClass = dropdown.expanded ? 'js-icon_flipped' : ''
-  - const expanderActiveClass = dropdown.expanded ? 'js-expander_active' : ''
-
   label.input__icon_expand( for=item.id )
     +materialIcon('expand_more', item.id)
-  .input__dropdown.js-expander__aim( class=expanderActiveClass data-options-type=dropdown.type )
+  .input__dropdown.js-expander__aim( data-options-type=dropdown.type )
     each option, index in options
       .input__option
         span.input__option-name #{option}
