--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -14,7 +14,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     margin-bottom: 5px;
   }
 
-  &__element {
+  &__container {
     position: relative;
     width: inherit;
   }
