--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -22,26 +22,27 @@ mixin input( item )
         }
       }
     }
-  - const dropdown =  item.dropdown || {}
   - const archetype = item.type
-  - const title =     item.title
-
+  - const dropdown = item.dropdown || {}
   - const checked = dropdown.expanded
   - const type = archetype === 'subscription' ? 'email' : 'text'
   - const readonly = archetype === 'dropdown' || archetype === 'date-picker'
   - const placeholder = definePlaceholder( archetype, dropdown.type, item.placeholder )
   - const currentWidth = `width:${ item.widthpx || '100%' }`
 
-  - const expanderParentClass = readonly ? 'js-expander__parent' : ''
-  - const datePickerClasses = archetype === 'date-picker' ? 'js-expander js-adp-frame' : ''
-  - const dropdownClasses =   archetype === 'dropdown' ? 'js-expander dropdown' : ''
-  - const frameClasses = datePickerClasses + dropdownClasses
+  - const parentMarkClass = readonly ? 'js-expander__parent' : ''
+  - const parentActiveClass = checked ? 'js-expander_active' : ''
+  - const parentClasses = parentMarkClass + parentActiveClass
 
-  .input( class=expanderParentClass, style=currentWidth )
-    if title
+  - const datePickerClass = archetype === 'date-picker' ? 'js-expander js-adp-frame' : null
+  - const dropdownClass = archetype === 'dropdown' ? 'js-expander dropdown' : null
+  - const frameClasses = datePickerClass || dropdownClass
+
+  .input( style=currentWidth )
+    if item.title
       .input__title
-        +titleBar( title, item.state )
-    .input__element
+        +titleBar( item.title, item.state )
+    .input__container( class=parentClasses )
       input.input__frame(
         class=       frameClasses
         id=          item.id
