--- a/src/components/card/__date-picker/card__date-picker.pug
+++ b/src/components/card/__date-picker/card__date-picker.pug
@@ -1,7 +1,7 @@
 include /components/date-picker/date-picker.pug
 
 mixin cardDatePicker( item )
-  .card-date-picker.js-expander__parent
+  .card-date-picker.js-expander__container
     .card-date-picker__frame.js-adp-frame
     .card-date-picker__aim.js-expander__aim( data-dates=item.dates )
       +datePicker( item.id )
