Date-picker component is under construction 3

--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -2,7 +2,7 @@ include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin datePicker( id )
   .date-picker
-    .date-picker__container
+    .date-picker__socket
     .date-picker__buttons
       .date-picker__buttons_clear
         +meanOvalButtons({
