--- a/src/components/input/__date-picker/input__date-picker.pug
+++ b/src/components/input/__date-picker/input__date-picker.pug
@@ -7,5 +7,5 @@ mixin inputDatePicker( item )
   label.input__icon_expand.js-expander__icon( for=item.id)
     +materialIcon('expand_more', item.id)
   .input__date-picker.js-expander__aim( class=hierarchyClass data-dates=item.dates )
-    if ( hierarchyClass !== 'js-slave' )
+    if ( item.hierarchy !== 'slave' )
       +datePicker( item.id )
