--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,39 +3,6 @@ include /components/input/input.pug
 include /components/title-bar/title-bar.pug
 include /components/navigation-bar/navigation-bar.pug
 
-- 
-  const navBarUnits = [
-    {
-      vertical: true,
-      title: "навигация",
-      links: [
-        { name: "О нас" },
-        { name: "Новости" },
-        { name: "Служба поддержки" },
-        { name: "Услуги" }
-      ]
-    },
-    {
-      vertical: true,
-      title: "О нас",
-      links: [
-        { name: "О сервисе" },
-        { name: "Наша команда" },
-        { name: "Вакансии" },
-        { name: "Инвесторы" }
-      ]
-    },
-    {
-      vertical: true,
-      title: "Служба поддержки",
-      links: [
-        { name: "Соглашения" },
-        { name: "Сообщества" },
-        { name: "Связь с нами" }
-      ]
-    }
-  ]
-
 mixin footer( item )
   case item.type
     when 'default'
@@ -46,6 +13,7 @@ mixin footer( item )
               .footer__logotype
                 +logo({ type: "colorful" })
               .footer__awards-text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+            include ./__nav-bar-units/footer__nav-bar-units.pug
             each unit in navBarUnits
               .footer__content_core
                 +navigationBar( unit )
