--- a/src/styles/__form/styles__form.scss
+++ b/src/styles/__form/styles__form.scss
@@ -1,11 +1,9 @@
+@import "@variables";
+
 %styles__form {
   &_twins-gridline {
     display: grid;
     grid-template-columns: repeat(2, auto);
     justify-content: start;
-  }
-  
-  &_fullscreen-bottom-border {
-    border-bottom: 1px solid rgba($valhalla, .25);
   }
 }
