--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -24,6 +24,10 @@
     align-items: flex-start;
     justify-content: center;
   }
+
+  &__footer {
+    border-top: 1px solid $valhalla-a;
+  }
 }
 
 .bg-pic {
