--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -4,6 +4,7 @@ $whisper: #E5E5E5;
 $perfume: #BC9CFF;
 $portage: #8BA4F9;
 
+$valhalla-a: rgba($valhalla, .25);
 $perfume-a: rgba($perfume, .25);
 $portage-a: rgba($portage, .25);
 
